Center align the html text in the homepage

--- a/homepage.html
+++ b/homepage.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>| My Bucketlist</title>
-        <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-        <style type="text/css">
-            body {padding-top: 60px};
-        </style>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="col-sm-offset-5 col-md-7">
-                My Bucketlist
-            </div>
-            <div class="col-sm-offset-3 col-md-9">
-                Welcome! Lets create a bucket list of your desired activities!
-            </div>
-            <div class="col-sm-offset-6">
-                <button type="submit" class="btn btn-default">Save</button>
-            </div>
-        </div>
-    </body>
+  <title>| My BucketList</title>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+</head>
+<body>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-12 text-center">
+              <h1>My BucketList</h1>
+          </div>
+      </div>
+
+      <hr>
+
+      <div class="col-md-12 text-center" >
+        <p>Welcome! Let's create a bucket list of your desired activities! </p>
+      </div>
+
+      <div class="col-md-12 text-center">
+          <p>Hit start to begin building your bucket list.</p>
+      </div>
+      <div class="col-md-12 text-center">
+          <div class="row">
+              <button type="submit" class="btn btn-primary">Start</button>
+          </div>
+      </div>
+    </div>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+</body>
 </html>
